--- a/requirements.txt
+++ b/requirements.txt
@@ -1,223 +1,63 @@
-absl-py==1.2.0
-asttokens==2.2.1
+absl-py==1.4.0
 astunparse==1.6.3
-backcall==0.2.0
-cachetools==5.2.0
-charset-normalizer==2.1.0
+attrs==22.2.0
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-comm==0.1.2
-commonmark==0.9.1
-configparser==5.3.0
+contourpy==1.0.7
 cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-docutils==0.19
-dominate==2.7.0
-executing==1.2.0
-Flask-Bootstrap==3.3.7.1
-Flask-WTF==1.0.1
-flatbuffers==1.12
-fonttools==4.34.4
-freetype-py==2.3.0
+Flask==2.2.3
+flatbuffers==23.3.3
+fonttools==4.39.2
 gast==0.4.0
-google-auth==2.9.1
+google-auth==2.16.2
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.47.0
-gunicorn==20.1.0
-h5py==3.7.0
-idna==3.3
-importlib-metadata==4.12.0
-ipykernel==6.22.0
-ipython==8.11.0
+grpcio==1.51.3
+h5py==3.8.0
+idna==3.4
 itsdangerous==2.1.2
-jedi==0.18.2
-joblib==1.1.0
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-keras-utils==1.0.13
-keyring==23.7.0
+jax==0.4.6
+Jinja2==3.1.2
+joblib==1.2.0
+keras==2.12.0
 kiwisolver==1.4.4
-libclang==14.0.1
-Markdown==3.4.1
-matplot==0.1.9
-matplotlib==3.5.2
-matplotlib-inline==0.1.6
-mediapipe==0.8.10.1
-nest-asyncio==1.5.6
-numpy==1.23.1
-oauthlib==3.2.0
-opencv-contrib-python==4.6.0.66
-opencv-python==4.6.0.66
+libclang==16.0.0
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mediapipe==0.9.2.1
+numpy==1.23.5
+oauthlib==3.2.2
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
 opt-einsum==3.3.0
 packaging==23.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.2.0
-pkginfo==1.8.3
-platformdirs==3.1.1
-prompt-toolkit==3.0.38
-protobuf==3.19.4
-psutil==5.9.4
-pure-eval==0.2.2
+Pillow==9.4.0
+protobuf==3.20.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-Pygments==2.14.0
-pyloco==0.0.139
 pyparsing==3.0.9
 python-dateutil==2.8.2
-pywin32==305
-pywin32-ctypes==0.2.0
-pyzmq==25.0.2
-readme-renderer==35.0
-requests==2.28.1
+requests==2.28.2
 requests-oauthlib==1.3.1
-requests-toolbelt==0.9.1
-rfc3986==2.0.0
-rich==12.5.1
 rsa==4.9
-scikit-learn==1.1.1
-scipy==1.8.1
-SimpleWebSocketServer==0.1.1
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
-sklearn==0.0
-stack-data==0.6.2
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
+sklearn==0.0.post1
+tensorboard==2.12.0
+tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-cpu==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.2.0
 threadpoolctl==3.1.0
-tornado==6.2
-traitlets==5.9.0
-twine==4.0.1
-typing==3.7.4.3
-urllib3==1.26.10
-ushlex==0.99.1
-visitor==0.1.3
-wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.3.3
-Werkzeug==2.2.2
-wincertstore==0.2
+typing_extensions==4.5.0
+urllib3==1.26.15
+Werkzeug==2.2.3
 wrapt==1.14.1
-WTForms==3.0.1
-zipp==3.8.1
-absl-py==1.2.0
-asttokens==2.2.1
-astunparse==1.6.3
-backcall==0.2.0
-cachetools==5.2.0
-charset-normalizer==2.1.0
-click==8.1.3
-colorama==0.4.6
-comm==0.1.2
-commonmark==0.9.1
-configparser==5.3.0
-cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-docutils==0.19
-dominate==2.7.0
-executing==1.2.0
-Flask==2.2.2
-Flask-Bootstrap==3.3.7.1
-Flask-WTF==1.0.1
-flatbuffers==1.12
-fonttools==4.34.4
-freetype-py==2.3.0
-gast==0.4.0
-google-auth==2.9.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.47.0
-gunicorn==20.1.0
-h5py==3.7.0
-idna==3.3
-importlib-metadata==4.12.0
-ipykernel==6.22.0
-ipython==8.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-joblib==1.1.0
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-keras-utils==1.0.13
-keyring==23.7.0
-kiwisolver==1.4.4
-libclang==14.0.1
-Markdown==3.4.1
-matplot==0.1.9
-matplotlib==3.5.2
-matplotlib-inline==0.1.6
-mediapipe==0.8.10.1
-nest-asyncio==1.5.6
-numpy==1.23.1
-oauthlib==3.2.0
-opencv-contrib-python==4.6.0.66
-opencv-python==4.6.0.66
-opt-einsum==3.3.0
-packaging==23.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.2.0
-pkginfo==1.8.3
-platformdirs==3.1.1
-prompt-toolkit==3.0.38
-protobuf==3.19.4
-psutil==5.9.4
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-Pygments==2.14.0
-pyloco==0.0.139
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pywin32==305
-pywin32-ctypes==0.2.0
-pyzmq==25.0.2
-readme-renderer==35.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.9.1
-rfc3986==2.0.0
-rich==12.5.1
-rsa==4.9
-scikit-learn==1.1.1
-scipy==1.8.1
-SimpleWebSocketServer==0.1.1
-six==1.16.0
-sklearn==0.0
-stack-data==0.6.2
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-cpu==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-threadpoolctl==3.1.0
-tornado==6.2
-traitlets==5.9.0
-twine==4.0.1
-typing==3.7.4.3
-urllib3==1.26.10
-ushlex==0.99.1
-visitor==0.1.3
-wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.3.3
-Werkzeug==2.2.2
-wincertstore==0.2
-wrapt==1.14.1
-WTForms==3.0.1
-zipp==3.8.1
