--- a/requirements.txt
+++ b/requirements.txt
@@ -113,7 +113,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.2
 pytz-deprecation-shim==0.1.0.post0
-pywin32==305
+# pywin32==305
 pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==25.0.2
